[gd_scene load_steps=6 format=2]

[ext_resource path="res://Textures/UI/tex_ui_playerFacingLock.png" type="Texture" id=1]
[ext_resource path="res://Textures/UI/tex_ui_playerFacing.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/PlayerUI.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.388235, 0.607843, 1, 1 )
border_width_top = 2
border_width_bottom = 6
border_color = Color( 0.333333, 0.494118, 0.984314, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[node name="PlayerUI" type="Node2D"]
script = ExtResource( 3 )

[node name="FacingArrow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_bottom = -25.0

[node name="Sprite" type="Sprite" parent="FacingArrow"]
position = Vector2( 105, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="FacingArrowLock" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 104, -25 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="HPBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -80.0
margin_right = 32.0
margin_bottom = -72.0
rect_pivot_offset = Vector2( 32, 8 )
mouse_filter = 2
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 50.0
percent_visible = false

[node name="HPBarFadeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="value_changed" from="HPBar" to="." method="_on_HPBar_value_changed"]
